examples/resolver/checker/pass/pointer_arithmetic_and_store.axo
var base = 10
const p = &base
const read = *p
print(read)
