examples/resolver/checker/fail/address_of_rvalue.axo
const ptr = &(1 + 2)
print(ptr)
